--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,10 @@ header .logo span{
 header .navbar a{
     font-size: 2rem;
     padding:0 1.5rem;
-    color:#666
+    color:#666;
 }
+
+
 
 header .navbar a:hover{
     color:var(--pink);
@@ -77,7 +79,7 @@ section{
 }
 .home .content p{
     font-size: 1.5rem;
-    color:aliceblue;
+    color:black;
     padding: 1rem;
     line-height: 1.5;
 }
@@ -93,6 +95,35 @@ section{
 }
 .button:hover{
     background: var(--pink);
+}
+.heading{
+    text-align: center;
+    font-size:4rem ;
+    color:#333;
+    padding:1rem;
+    margin: 3rem 0;
+    background: rgba(0,0,0,.1);
+}
+.heading span{
+    color: var(--pink);
+    text-align: justify;
+}
+.about{
+    display:flex;
+    align-items: center;
+    min-height: 100vh;
+    background:url(../images/flowas.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+.content p{
+    font-size:2rem;
+    color:black;
+}
+.content h2{
+    color: plum;
+    font-size:5rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
