--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,45 @@ section{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.products .box-container{
+    display:flex;
+    flex-wrap: wrap;
+    gap:2rem;
+}
+
+.products .box-container .box{
+    flex:1 1 30rem;
+    box-shadow: 0.5rem 1.5rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    border:1rem solid rgba(0,0,0,.1);
+    position:relative;
+}
+.products .box-container .box .discount{
+    position: absolute;
+    top:1rem; left:1rem;
+    padding:7rem  1rem;
+    font-size: 2rem;
+    color: var(--pink);
+    background: rgba(255, 51, 153, .05);
+    z-index: 1;
+    border-radius: .5rem;
+}
+.products .box-container .box .image{
+    position: relative;
+    text-align: center;
+    padding-top: 1.5rem;
+    overflow: hidden;
+}
+.products .box-container .box .image img{
+    height: 25rem;
+}
+.products .box-container .box:hover .image img{
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+
+
 
 
 
