edited tags on html files

--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ section{
 }
 /* form-styles.css */
 
- body .input{
+ body {
   font-family: Arial, sans-serif;
   background-color: aliceblue ;
   color: #333;
