updated css and html

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ section{
     display:flex;
     align-items: center;
     min-height: 100vh;
-    background:url(../images/flowas.jpeg);
+    background:url(../images/flow.jpg);
     background-size: cover;
     background-position: center;
 }
