--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,7 @@ section{
     font-weight:lighter;
     text-decoration: line-through;
 }
-/* form-styles.css */
+
 
  .submit {
   font-family: Arial, sans-serif;
@@ -245,12 +245,27 @@ button:hover {
   display: none;
 }
 
-/* Form input focus state */
+
 input:focus,
 textarea:focus {
   border-color: #80bdff;
   outline: none;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+footer {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
